--- a/src/assets/styles/cmps/_group-list.scss
+++ b/src/assets/styles/cmps/_group-list.scss
@@ -44,6 +44,10 @@
             align-items: center;
         }
 
+        & .header-item {
+            text-transform: capitalize;
+        }
+
     }
 
     & .group-container {
