--- a/src/assets/styles/cmps/_task-list.scss
+++ b/src/assets/styles/cmps/_task-list.scss
@@ -118,6 +118,7 @@
         }
 
         .progress-bar-container span {
+            font-size: 13px;
             z-index: 1;
             position: absolute;
             width: 100%;
