--- a/src/assets/styles/cmps/_timeline-picker-modal.scss
+++ b/src/assets/styles/cmps/_timeline-picker-modal.scss
@@ -10,7 +10,7 @@
     box-shadow: rgba(0, 0, 0, 0.2) 0px 6px 20px;
     border-radius: 4px;
     font-size: 14px;
-    
+    position: absolute;
   }
 
   .rdp-button:hover:not([disabled]):not(.rdp-day_selected) {
