--- a/src/assets/styles/cmps/_Board-sidebar.scss
+++ b/src/assets/styles/cmps/_Board-sidebar.scss
@@ -21,6 +21,10 @@
         height: 20px;
     }
 
+    .textField_5c7ed8f268 .inputWrapper_f7d37dd0a6 .iconContainer_fb989f5083.iconContainerActive_6caf034a46 .icon_f7d37dd0a6{
+        display: none;
+    }
+
     .button-sidebar {
         position: absolute;
         right: 0px;
