--- a/src/assets/styles/cmps/_timeline-picker-modal.scss
+++ b/src/assets/styles/cmps/_timeline-picker-modal.scss
@@ -1,99 +1,8 @@
 .task-date {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  cursor: text;
+  // z-index: 999;
+  position: absolute;
 
-  .date-picker-modal {
-    background-color: var(--primary-background-color);
-    z-index: 10;
-    box-shadow: rgba(0, 0, 0, 0.2) 0px 6px 20px;
-    border-radius: 4px;
-    font-size: 14px;
-    position: absolute;
-  }
 
-  .rdp-button:hover:not([disabled]):not(.rdp-day_selected) {
-    background-color: $clr-border;
-  }
-
-  .my-selected:not([disabled]) {
-    border-radius: var(--border-radius-small);
-    background-color: $bgc-main;
-    color: white;
-  }
-
-  .my-selected:hover:not([disabled]) {
-    background-color: #0060b9;
-    border: 1px solid black;
-    color: black;
-  }
-
-  .my-today {
-    border-radius: 2em;
-    border: 1px solid #0060b9;
-    background-color: #0073ea;
-    color: white;
-  }
-  .rdp-weeknumber, .rdp-day{
-    border-radius: em(4px);
-    margin-top: 2px;
-    margin-bottom: 2px;
-    margin-left: 4px;
-    margin-right: 4px;
-  }
-
-  .date-container {
-    position: relative;
-    cursor: text;
-
-    .date-indication {
-      position: absolute;
-      left: 3px;
-      top: 50%;
-      transform: translateY(-50%);
-
-      .icon {
-        border-radius: 50%;
-        width: 16px;
-        height: 16px;
-        color: white;
-        cursor: text;
-
-        &.done-icon {
-          background-color: var(--positive-color);
-        }
-
-        &.not-done-icon {
-          background-color: rgb(93, 99, 135);
-
-          &::before {
-            content: "";
-            border-left: 6px solid transparent;
-            border-right: 6px solid transparent;
-            border-bottom: 11px solid var(--primary-background-color);
-            position: absolute;
-            bottom: 50%;
-            left: 50%;
-            transform: rotate(100deg);
-          }
-
-          &::after {
-            content: "";
-            position: absolute;
-            border: 1px solid rgb(93, 99, 135);
-            width: 14px;
-            height: 14px;
-            border-radius: 50%;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            z-index: 1;
-          }
-        }
-      }
-    }
-  }
   .rdp {
     --rdp-cell-size: 30px;
     --rdp-caption-font-size: 18px;
@@ -106,4 +15,98 @@
     /* --rdp-selected-color: #fff; */
   }
 
+}
+
+.date-picker-modal {
+  background-color: var(--primary-background-color);
+  z-index: 10;
+  box-shadow: rgba(0, 0, 0, 0.2) 0px 6px 20px;
+  border-radius: 4px;
+  font-size: 14px;
+  transform: translate(-50%, 7%);
+  position: absolute;
+}
+
+.rdp-button:hover:not([disabled]):not(.rdp-day_selected) {
+  background-color: $clr-border;
+}
+
+.my-selected:not([disabled]) {
+  border-radius: em(4px);
+  // background-color: $bgc-main;
+  color: white;
+}
+
+.my-selected:hover:not([disabled]) {
+  background-color: #0060b9;
+  border: 1px solid black;
+  color: black;
+}
+
+.my-today {
+  border-radius: 2em;
+  border: 1px solid #0060b9;
+  background-color: #0073ea;
+  color: white;
+}
+
+.rdp-weeknumber,
+.rdp-day {
+  border-radius: em(4px);
+  margin-top: 2px;
+  margin-bottom: 2px;
+  margin-left: 4px;
+  margin-right: 4px;
+}
+
+.date-container {
+  position: relative;
+  cursor: text;
+
+  .date-indication {
+    position: absolute;
+    left: 3px;
+    top: 50%;
+    transform: translateY(-50%);
+
+    .icon {
+      border-radius: 50%;
+      width: 16px;
+      height: 16px;
+      color: white;
+      cursor: text;
+
+      &.done-icon {
+        background-color: var(--positive-color);
+      }
+
+      &.not-done-icon {
+        background-color: rgb(93, 99, 135);
+
+        &::before {
+          content: "";
+          border-left: 6px solid transparent;
+          border-right: 6px solid transparent;
+          border-bottom: 11px solid var(--primary-background-color);
+          position: absolute;
+          bottom: 50%;
+          left: 50%;
+          transform: rotate(100deg);
+        }
+
+        &::after {
+          content: "";
+          position: absolute;
+          border: 1px solid rgb(93, 99, 135);
+          width: 14px;
+          height: 14px;
+          border-radius: 50%;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+          z-index: 1;
+        }
+      }
+    }
+  }
 }
