--- a/src/assets/styles/cmps/_label-picker.scss
+++ b/src/assets/styles/cmps/_label-picker.scss
@@ -10,6 +10,7 @@
     -moz-box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.32);
     height: max-content;
     border-radius: 0.6em;
+    z-index: 111;
     // padding: 5px;
 
     ul {
@@ -28,6 +29,16 @@
 
     li:hover {
         opacity: 0.85;
+    }
+
+    .cell-target-indicator {
+        height: 20px;
+        width: 100%;
+        background-color: #f0f0f0;
+        text-align: center;
+        line-height: 20px;
+        border-top-left-radius: 0.6em;
+        border-top-right-radius: 0.6em;
     }
 }
 
