--- a/src/assets/styles/cmps/_Board-sidebar.scss
+++ b/src/assets/styles/cmps/_Board-sidebar.scss
@@ -148,6 +148,7 @@
         text-align: start;
         height: 1.5em;
         font-size: 14px;
+        margin-left: 0.2em;
     }
 
     .house-svg {
