--- a/src/assets/styles/cmps/_board-header.scss
+++ b/src/assets/styles/cmps/_board-header.scss
@@ -3,6 +3,7 @@
     padding: 20px 30px 0px 32px;
     padding-top: 16px;
     position: sticky;
+    left: 0;
     top: 0;
     background-color: $bgc-main;
     width: 100%;
