--- a/src/assets/styles/cmps/_board-index.scss
+++ b/src/assets/styles/cmps/_board-index.scss
@@ -2,6 +2,7 @@
     display: grid;
     width: 100%;
     grid-template-columns: auto 1fr;
-    grid-template-rows: auto 1fr;
+    // grid-template-rows: auto 1fr;
     column-gap: 12px;
+    overflow: hidden;
 }
