--- a/src/assets/styles/basics/_base.scss
+++ b/src/assets/styles/basics/_base.scss
@@ -4,7 +4,8 @@
 
 #root {
     height: 100vh;
-    width: 100vw;
+    display: grid;
+    grid-template-rows: auto 1fr;
 }
 
 html {
@@ -173,6 +174,3 @@ li {
     color: #323338;
 }
 
-[data-testid="editable-input"] {
-    color: inherit;
-}
