--- a/src/assets/styles/cmps/_Board-sidebar.scss
+++ b/src/assets/styles/cmps/_Board-sidebar.scss
@@ -2,7 +2,7 @@
     background-color: #ffffff;
     position: relative;
     width: 255px;
-    height: 100vh;
+    // height: 100vh;
     border-radius: 0 0.5em 0 0;
     transition: 0.2s;
     z-index: 35;
