--- a/src/assets/styles/cmps/_app-header.scss
+++ b/src/assets/styles/cmps/_app-header.scss
@@ -1,7 +1,7 @@
 header {
     display: grid;
     grid-template-columns: auto 1fr;
-    grid-template-rows: auto 1fr;
+    // grid-template-rows: auto 1fr;
     height: em(48px);
 
     column-gap: 12px;
