--- a/src/assets/styles/cmps/_board-details.scss
+++ b/src/assets/styles/cmps/_board-details.scss
@@ -20,7 +20,7 @@
     position: relative;    
     border-radius: 0.5em 0 0 0;
     min-width: 0;
-// .board-details {
+// .board-details {s=
 //     display: grid;
 //     position: relative;
 //     background-color: $clr6;
