--- a/src/assets/styles/cmps/_board-preview.scss
+++ b/src/assets/styles/cmps/_board-preview.scss
@@ -40,6 +40,10 @@
                 outline: 1px solid #0073ea ;
             }
         }
+
+        .editable-title-dyn-cmp {
+            color: #909090;
+        }
     
         .editable-title-dyn-cmp-input {
             display: block; // Ensures the input is block-level for full width
