--- a/src/assets/styles/cmps/_group-list.scss
+++ b/src/assets/styles/cmps/_group-list.scss
@@ -15,6 +15,8 @@
         grid-column: 1/-1;
     }
 
+   
+
     & .header-items {
         display: grid;
         grid-auto-flow: column;
@@ -92,6 +94,10 @@
             // border-top: none;
             left: 40px;
             grid-template-columns: 36px 1fr;
+
+            &:hover {
+                // background-color: rgba(103, 104, 121, 0.1);
+            }
         }
 
 
@@ -104,6 +110,9 @@
             height: 100%;
             grid-template-columns: 36px 1fr;
             z-index: 11;
+            &:hover {
+                // background-color: rgba(103, 104, 121, 0.1);
+            }
             // grid-template-columns: 304px 65px;
         }
     }
