--- a/src/assets/styles/cmps/_group-list.scss
+++ b/src/assets/styles/cmps/_group-list.scss
@@ -191,4 +191,33 @@
     [data-testid="editable-input"] {
         color: inherit;
     }
+
+    .group-color-display {
+        position: relative;
+        width: 20px;
+        height: 20px;
+        border-radius: 50%;
+        margin-inline: 1px 2px;
+        cursor: pointer;
+        z-index: 40;
+    }
+
+    .color-picker-modal {
+        display: grid;
+        grid-template-columns: repeat(5, auto);
+        gap: 6px;
+        background-color: #fff;
+        border-radius: 4px;
+        outline: 1px solid #c3c6d4;
+        padding: 5px;
+        cursor: auto;
+        // position: absolute;
+    }
+
+    .color {
+        border-radius: 50%;
+        width: 20px;
+        height: 20px;
+        cursor: pointer;
+    }
 }
