--- a/src/assets/styles/cmps/_group-list.scss
+++ b/src/assets/styles/cmps/_group-list.scss
@@ -15,15 +15,12 @@
         grid-column: 1/-1;
     }
 
-   
-
     & .header-items {
         display: grid;
         grid-auto-flow: column;
         grid-template-columns: subgrid;
         grid-column: 1/-1;
         grid-auto-flow: column;
-        // border: 1px solid $clr-border;
         height: 2.25em;
         align-items: center;
         text-align: center;
@@ -76,30 +73,26 @@
     & .group-container {
         background-color: $bgc-main;
         display: grid;
-        // grid-template-columns: 36px 350px 150px 150px 100px 200px repeat(auto-fill, minmax(100px,1fr));
         grid-template-columns: 40px 453px 150px 150px 100px 200px 100px 100px 100px 100px;
         grid-template-rows: 36px;
         width: 100%;
         margin-bottom: em(28px);
 
 
-        // grid-template-columns: repeat(auto-fit);
         .group-preview-title-container {
             position: sticky;
             left: 0;
             display: grid;
             grid-auto-flow: column;
             background-color: #ffffff;
-            // z-index: 1111;
             border: 1px solid #d0d4e4;
             border-bottom: none;
-            // border-top: none;
             left: 40px;
             grid-template-columns: 36px 1fr;
 
-            &:hover {
-                // background-color: rgba(103, 104, 121, 0.1);
-            }
+            // &:hover {
+            //     background-color: rgba(103, 104, 121, 0.1);
+            // }
         }
 
 
@@ -112,17 +105,11 @@
             height: 100%;
             grid-template-columns: 36px 1fr;
             z-index: 11;
-            &:hover {
-                // background-color: rgba(103, 104, 121, 0.1);
-            }
-            // grid-template-columns: 304px 65px;
+
+
+
         }
     }
-
-    // &>* {
-    //     grid-column: 1/-1;
-    //     grid-template-columns: subgrid;
-    // }
 
     .group-title {
         font-family: poppins;
@@ -134,11 +121,9 @@
         display: grid;
         grid-column: 1/-1;
         position: relative;
-        // right: 1.8em;
         grid-auto-flow: column;
         justify-content: start;
         align-items: center;
-        // color: $clr-label-3;
 
         .elementTypeH3_ca3a1ab6a4.sizeLarge_c730ce20f8 {
             font-family: poppins-medium;
@@ -207,7 +192,4 @@
         display: none;
     }
 
-    & .singleLineEllipsis_f03db45281 {
-        // display: none;
-    }
 }
