--- a/src/assets/styles/cmps/_user-msg.scss
+++ b/src/assets/styles/cmps/_user-msg.scss
@@ -13,9 +13,11 @@
 
 
     // position: static;
+    z-index: 999999;
+
     transform: translate(0, 0);
     margin-right: auto;
-    margin-left: auto ;
+    margin-left: auto;
     // position: fixed;
     right: 0;
     left: 0;
@@ -28,8 +30,35 @@
     white-space: nowrap;
     border-radius: 4px;
 
+
+
 }
 
+.monday-storybook-toast_wrapper {
+    font-size: 14px !important;
+    font-family: Figtree;
+    color: white;
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    margin-right: auto;
+    margin-left: auto;
+    max-width: max-content;
+    white-space: nowrap;
+    z-index: 999999;
+    transition: transform 1s ease-in;
+    transform: translateY(-200%); // Start off the screen
+
+    & span {
+        font-size: 14px;
+        color: white;
+    }
+
+    &.active {
+        transform: translateY(0); // Slide into view
+    }
+}
 
 
 .user-msg button {
@@ -48,7 +77,7 @@
     background-color: #d83a52;
 }
 
-.user-x:hover{
+.user-x:hover {
     background-color: rgba(103, 104, 121, 10%);
     cursor: pointer;
 }
