--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -19,6 +19,7 @@
 @import "views/CarIndex";
 @import "views/ReviewIndex";
 @import "views/UserDetails";
+@import "cmps/BoardHome";
 
 // Components
 @import "cmps/app-header";
@@ -40,6 +41,7 @@
 @import "cmps/label-picker";
 @import "cmps/timeline-picker-modal";
 @import "cmps/activity";
+
 
 
 
