--- a/src/assets/styles/cmps/_boardhome.scss
+++ b/src/assets/styles/cmps/_boardhome.scss
@@ -24,5 +24,46 @@
         height: 100%;
         width: 100%;
         background-color: #fff;
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+        justify-content: center;
+        justify-items: center;
+        padding: 10px;
+        gap: 10px;
+
+        .board-home-card-container {
+            display: grid;
+            width: max-content;
+            height: min-content;
+            grid-template-rows: 140px 2em;
+            justify-items: start;
+            justify-content: space-around;
+            border: 1px solid $clr-border;
+            padding: 5px;
+            border-radius: 0.3em;
+            color: rgb(50,51,56);
+            cursor: pointer;
+            transition: 0.2s;
+
+            &:hover {
+                box-shadow: 0px 6px 20px rgba(0,0,0,0.2);
+                border: 1px solid transparent;
+                text-decoration: none;
+            }
+
+            .quick-search-item-image{
+                max-height: 140px;
+                
+            }
+
+            .board-home-card-title{
+                display: grid;
+                grid-auto-flow: column;
+                align-items: center;
+                width: max-content;
+                column-gap: 0.5em ;
+                font-size: 100%;
+            }
+        }
     }
 }
