--- a/src/assets/styles/cmps/_task-list.scss
+++ b/src/assets/styles/cmps/_task-list.scss
@@ -64,7 +64,7 @@
 
     .dyn-cell {
         align-self: center;
-        height: 100%;
+        height: 36px;
         display: grid;
         align-items: center;
         // border-left: 1px solid $clr-border;
@@ -88,7 +88,7 @@
         color: $clr6;
         font-size: 0.875em;
         line-height: 1.3125;
-        height: 100%;
+        // height: 100%;
     }
 
     .dyn-cell.title div {
@@ -101,6 +101,7 @@
         border-bottom-left-radius: 0.3em;
         background-color: white;
         grid-column: 1/-1;
+
         // left: 40px;
     }
 
@@ -143,7 +144,7 @@
 
         .progress-bar {
             background-color: #00c875;
-            height: 100%;
+            // height: 100%;
             // border-radius: inherit;
             transition: width 0.4s ease;
             position: absolute;
@@ -167,7 +168,7 @@
         display: grid;
         position: sticky;
         left: 0;
-        height: 100%;
+        // height: 100%;
         background: #fff;
         justify-content: center;
         align-items: center;
@@ -188,7 +189,7 @@
         border-bottom: 1px solid $clr-border;
     }
 
-    .dyn-cell.date-container{
+    .dyn-cell.date-container {
         border-bottom: 1px solid $clr-border;
     }
 
@@ -203,6 +204,7 @@
         justify-items: center;
         border-bottom: 1px solid $clr-border;
     }
+
     .dyn-cell.timelines {
         // display: grid;
         justify-items: center;
@@ -220,7 +222,7 @@
     }
 
     & .add-task-sticky-container {
-        height: 100%;
+        // height: 100%;
         width: 100%;
         display: grid;
         grid-auto-flow: column;
@@ -235,11 +237,13 @@
         align-items: center;
         width: 100%;
         border-top: 1px solid #d0d4e4;
+        border-right: 1px solid #d0d4e4;
+        height: 36px;
     }
 
     & .add-task-fill-gap {
         grid-column: 3/-1;
-        height: 39px;
+        height: 36px;
         width: 100%;
         border: 1px solid #d0d4e4;
         border-left: none;
@@ -270,6 +274,49 @@
     & .btn-message-container svg:hover {
         color: $clr-btn;
     }
+
+    &.statistics {
+        >:nth-child(2) {
+            border-bottom-left-radius: 0.3em;
+            border-left: 1px solid $clr-border;
+        }
+    }
+
+    & .group-statistics-fill {
+        // border: 1px solid $clr-border;
+        border-bottom: none;
+        border-left: none;
+        border-top: none;
+
+    }
+
+    & .stats-cell-container {
+        border: 1px solid $clr-border;
+        height: 36px;
+        align-content: center;
+        border-top: none;
+        width: 100%;
+        // border-right: none;
+        border-left: none;
+
+        &:first-child {
+            border-left: 1px solid $clr-border;
+        }
+
+    }
+
+    & .stats-cell-container:first-of-type {
+        border-left: none;
+    }
+
+    & .stats-fill-cell {
+        border: 1px solid $clr-border;
+        height: 36px;
+        border-top: none;
+        border-right: none;
+    }
+    
+    
 
     // & .task-preview-title-container .task-title-cell:last-of-type {
     //     border-bottom: 1px solid #d0d4e4;
