--- a/src/assets/styles/cmps/_board-preview.scss
+++ b/src/assets/styles/cmps/_board-preview.scss
@@ -94,5 +94,35 @@
             // padding-block-end: 2px;
             height: 24px;
         }
+
+    }
+    .add-group-bottom-container {
+        width: max-content;
+        align-items: center;
+        border: 1px solid $clr-border;
+        border-radius: 0.2em;
+        margin-left: 40px;
+        margin-bottom: 40px;
+        padding-inline: 8px;
+        padding-block: 4px;
+        column-gap: 4px;
+        background-color: #fff;
+        cursor: pointer;
+
+        &:hover {
+            background-color:rgba(103, 104, 121, 0.1);
+        }
+
+        .bottom-add-group-btn {
+            // background-color: #fff;
+            color: #323338;
+            font-family: poppins;
+            font-size: 14px;
+            padding: 0;
+            // appearance: none;
+            // &:hover {
+            //     background:rgba(103, 104, 121, 0.1);
+            // }
+        }
     }
 }
