--- a/src/assets/styles/cmps/_task-list.scss
+++ b/src/assets/styles/cmps/_task-list.scss
@@ -168,10 +168,11 @@
         display: grid;
         position: sticky;
         left: 0;
-        // height: 100%;
+        height: 100%;
         background: #fff;
         justify-content: center;
         align-items: center;
+        z-index: 11111;
     }
 
     &:hover .task-actions button {
@@ -229,6 +230,8 @@
         grid-template-columns: 36px;
         position: sticky;
         left: 40px;
+        
+        // border-bottom-left-radius: 0.3em;
         // grid-column: 2 / -1;
     }
 
