--- a/src/assets/styles/cmps/_board-list.scss
+++ b/src/assets/styles/cmps/_board-list.scss
@@ -13,6 +13,8 @@
         display: flex;
         gap: 1em;
         padding: 0.3em;
+        overflow: hidden;
+        text-overflow: ellipsis;
     }
 
 
