--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -20,6 +20,7 @@
 @import "views/ReviewIndex";
 @import "views/UserDetails";
 @import "cmps/BoardHome";
+@import "views/LoginPage";
 
 // Components
 @import "cmps/app-header";
