--- a/src/assets/styles/views/LoginPage.scss
+++ b/src/assets/styles/views/LoginPage.scss
@@ -1,11 +1,31 @@
 .login-page {
-    background-color: aqua;
+    background-color: $bgc-main;
     display: grid;
     grid-template-columns: auto 40%;
     height: 100vh;
     width: 100vw;
+    position: relative;
 
-    .login-signup{
+    & .rect {
+        display: flex;
+        height: em(40px);
+        width: em(400px);
+        align-items: center;
+        justify-content: center;
+        border-radius: em(4px);
+        border: 1px solid $clr-border;
+    }
+
+
+
+    .login-signup-container {
+        display: flex;
+        flex-direction: column;
+        height: 100%;
+        align-items: center;
+    }
+
+    .login-signup {
         display: flex;
         flex: 1;
         flex-direction: column;
@@ -15,22 +35,112 @@
         & article {
             margin-bottom: em(48px);
             text-align: center;
-            & h1{
+
+            & h1 {
                 font-family: poppins;
                 letter-spacing: 0.5px;
                 margin-bottom: em(8px);
-    
-    
-                & p{
+
+
+                & p {
                     font-size: 1em;
                     font-family: poppins-medium;
-    
+
                 }
             }
         }
-        
+
+        & .separator-box {
+            display: grid;
+            gap: em(8px);
+            grid-template-columns: 1fr auto 1fr;
+            margin-bottom: em(16px);
+            margin-top: em(16px);
+            width: em(400px);
+
+            font-family: figtree;
+
+            & .separator-line {
+                align-self: flex-end;
+                border-top: 1px solid $clr-border;
+                height: 50%;
+            }
+        }
+
+
+
+        & .google-login {
+            font-family: figtree;
+
+            & img {
+                height: 16px;
+                margin-right: em(8px);
+                width: 16px;
+            }
+        }
+
+        & .work-email {
+            & span {
+                // margin-bottom: 8px;
+            }
+
+            & .work-email-input {
+                margin-top: em(8px);
+                margin-bottom: em(16px);
+                font-family: poppins;
+                color: $clr-main;
+                font-size: em(14px);
+                padding: 8px 16px;
+                height: 40px;
+                width: 400px;
+                border: 1px solid #0073ea;
+                transition: border-color .1s ease-in;
+
+                &:hover {
+                    border-color: black;
+                }
+
+                &:focus-visible {
+                    border: 1px solid #0073ea;
+                    outline: none;
+
+                    &:hover {
+                        border-color: black;
+
+                    }
+                }
+            }
+
+        }
+
+        & button {
+            background-color: #0073ea;
+            color: $bgc-main;
+            height: 40px;
+            width: 400px;
+            font-size: 1em;
+            transition: .1s ease-in-out;
+
+            &:hover {
+                background-color: #0060b9;
+            }
+
+            &:active {
+                scale: .95;
+            }
+
+            &.white{
+                background-color: $bgc-main;
+                color: $clr-main;
+                &:hover{
+                    background-color: rgba(103, 104, 121, 0.1);
+                }
+            }
+        }
+
     }
-    .img-container{
+
+    .img-container {
         display: flex;
         justify-content: center;
         overflow: hidden;
@@ -40,6 +150,53 @@
             height: 100%;
             width: unset;
 
+        }
+    }
+
+    .terms {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin-top: 16px;
+        gap: 4px;
+
+
+        .terms-links-wrapper {
+            display: flex;
+            gap: 4px;
+        }
+
+        a {
+            color: #1f76c2;
+            text-decoration: none;
+            
+            &:hover {
+                text-decoration: underline solid #1f76c2;
+            }
+
+            &:active{
+                // text-decoration: ;
+            }
+        }
+    }
+
+    & footer {
+        display: flex;
+        gap: em(8px);
+        margin-bottom: em(64px);
+        align-items: center;
+        justify-content: center;
+        color: #1f76c2;
+
+        a{
+            text-decoration: none;
+            &:hover {
+                text-decoration: underline solid #1f76c2;
+            }
+            &:active{
+                color: #1f76c2;
+            }
         }
     }
 }
