--- a/src/assets/styles/cmps/_Board-sidebar.scss
+++ b/src/assets/styles/cmps/_Board-sidebar.scss
@@ -23,7 +23,7 @@
         width: 30px; 
         background-color: #ffffff;
         transition: width 0.2s ease;
-        overflow: auto;
+        overflow: hidden;
 
         &:hover {
             width: 255px;
