Css cosmetic changes and ui bugs fixing

--- a/src/assets/styles/cmps/_board-list.scss
+++ b/src/assets/styles/cmps/_board-list.scss
@@ -52,7 +52,7 @@
     }
 
     .actions-border-side {
-        position: absolute;
+        position: fixed;
         left: 13em;
         background-color: #fff;
         box-shadow: 0 4px 17px 6px #0000001a;
