Fix side bar and table borders

--- a/src/assets/styles/cmps/_Board-sidebar.scss
+++ b/src/assets/styles/cmps/_Board-sidebar.scss
@@ -85,6 +85,7 @@
 
     .button-sidebar {
         position: absolute;
+        opacity: 0;
         right: 0px;
         border-radius: 4px;
         width: 30px;
@@ -106,10 +107,32 @@
 
     &.open-sidebar {
         width: 255px;
-        // width: 100%;
         overflow: hidden;
         transition: width .2s;
 
+        .button-sidebar {
+
+            &:hover {
+
+                background-color: rgba(103, 104, 121, 0.1);
+            }
+        }
+    }
+
+    &.open-sidebar:hover {
+
+        .button-sidebar {
+            opacity: 1;
+
+            &:hover {
+
+                background-color: rgba(103, 104, 121, 0.1);
+            }
+        }
+    }
+
+    &.close-sidebar {
+    
         .button-sidebar {
             opacity: 1;
 
@@ -315,7 +338,7 @@
     .arrow-workspace {
         position: absolute;
         right: 4.5em;
-        top: 7.5em;
+        top: 7.95em;
     }
 
     .favorites {
@@ -348,5 +371,13 @@
     // }
 
 
+
+}
+
+.board-sidebar .open-sidebar:hover{
+    .button-sidebar{
+        display: block;
+        opacity: 1;
+    }
 
 }
