Side bar changes

--- a/src/assets/styles/cmps/_Board-sidebar.scss
+++ b/src/assets/styles/cmps/_Board-sidebar.scss
@@ -350,6 +350,10 @@
         }
     }
 
+    .tool{
+        position: fixed;
+        z-index: 111111111;
+    }
     // .lower-sidebar.close-sidebar .all-sidebar {
     //     width: 30px;
     // }
