--- a/src/assets/styles/views/LoginPage.scss
+++ b/src/assets/styles/views/LoginPage.scss
@@ -187,7 +187,7 @@
         margin-bottom: em(64px);
         align-items: center;
         justify-content: center;
-        color: #1f76c2;
+        color: $clr-main;
 
         a{
             text-decoration: none;
