--- a/src/assets/styles/views/HomePage.scss
+++ b/src/assets/styles/views/HomePage.scss
@@ -1,13 +1,114 @@
+.home-page {
+    background-color: $bgc-main;
+    height: 100%;
+
+    & .home-header {
+        display: flex;
+        align-items: center;
+        width: em(1440px);
+        height: em(72px);
+        margin-left: auto;
+        margin-right: auto;
+
+        & .home-actions {
+            display: flex;
+            align-items: center;
+            gap: em(16px);
+
+
+            & .login-btn {
+                font-family: poppins;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                padding: 8px 10px;
+                height: em(32px);
+                width: em(60px);
+                border-radius: em(8px);
+                font-size: 14px;
+                color: $clr-main;
+                background: none;
+
+                &:hover {
+                    color: #5034FF;
+                    background-color: #F0F3FF;
+                }
+            }
+
+            & .cta-btn {
+                font-family: poppins;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                height: 40px;
+                width: 130px;
+                background-color: rgb(97, 97, 255);
+                border-radius: 2em;
+                padding: 8px 14px 8px 16px;
+                font-size: 13px;
+
+                &:hover {
+                    background-color: #5151d5;
+                }
+            }
+        }
+
+        .logo {
+            position: relative;
+            height: 38px;
+            margin-right: 16px;
+
+            img {
+                object-fit: contain;
+                height: 100%;
+            }
+        }
+
+    }
+
+    & .hero-header {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        padding-top: 2.7vw;
+        color: rgb(0, 0, 0);
+
+        & h1 {
+            font-family: poppins-bold;
+            // margin-bottom: 1vw;
+            font-size: em(60px);
+            letter-spacing: -.5px;
+            // line-height: em(85px);
+        }
+
+        & h2 {
+            font-family: poppins-ex-light;
+            font-size: em(24px);
+            letter-spacing: .2px;
+            line-height: em(30px);
+            text-align: center;
+            word-break: break-word;
+            // text-size-adjust: 100%;
+
+        }
+    }
+}
+
 .grid-container {
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 10px;
+
 }
+
 
 .grid-item {
     padding: 20px;
     background-color: blue;
     border: 1px solid black;
-    resize: both; /* Allows resizing */
-    overflow: auto; /* Needed to enable resizing */
+    resize: both;
+    /* Allows resizing */
+    overflow: auto;
+    /* Needed to enable resizing */
 }
