--- a/src/assets/styles/cmps/_board-preview.scss
+++ b/src/assets/styles/cmps/_board-preview.scss
@@ -111,7 +111,8 @@
         column-gap: 4px;
         background-color: #fff;
         cursor: pointer;
-
+        margin-bottom: 40px;
+        
         &:hover {
             background-color:rgba(103, 104, 121, 0.1);
         }
