Fix sticky on statistics

--- a/src/assets/styles/cmps/_task-list.scss
+++ b/src/assets/styles/cmps/_task-list.scss
@@ -288,6 +288,7 @@
 
     & .group-statistics-fill {
         // border: 1px solid $clr-border;
+        height: 36px;
         border-bottom: none;
         border-left: none;
         border-top: none;
