Add sticky group headers

--- a/src/assets/styles/basics/_helpers.scss
+++ b/src/assets/styles/basics/_helpers.scss
@@ -64,3 +64,11 @@
     overflow-x: scroll;
 }
 
+
+// .main-table-tab{
+
+// }
+
+// .monday-style-dialog-content-wrapper >*{
+//     z-index: 99999;
+// }
