--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -3,6 +3,7 @@
 @import "setup/variables";
 @import "setup/functions";
 @import "setup/typography";
+@import "setup/animations";
 
 // Basics
 @import "basics/base";
