--- a/src/assets/styles/cmps/_group-list.scss
+++ b/src/assets/styles/cmps/_group-list.scss
@@ -66,6 +66,12 @@
 
         & .header-item {
             text-transform: capitalize;
+
+            &.sticky {
+                height: 100%;
+                display: grid;
+                align-items: center;
+            }
         }
 
     }
@@ -102,7 +108,7 @@
             left: 40px;
             height: 100%;
             grid-template-columns: 36px 1fr;
-            z-index: 11;
+            // z-index: 11;
 
 
 
@@ -234,7 +240,7 @@
 
 .typePopover_78e5ed1923 {
     display: block;
-    position: fixed;
+    // position: fixed;
     top: -50px;
     left: 5em;
 }
