--- a/src/assets/styles/cmps/_label-picker.scss
+++ b/src/assets/styles/cmps/_label-picker.scss
@@ -1,7 +1,8 @@
 .label-picker-container {
     position: absolute;
     background-color: white;
-    width: 150px;
+    width: 200px;
+    
     display: grid;
     justify-content: center;
     cursor: pointer;
@@ -30,6 +31,7 @@
         color: white;
         border-radius: 0.2em;
         margin-bottom: 7px;
+        // width: 150px;
     }
 
     li:hover {
@@ -56,7 +58,8 @@
 
     .arrow-up {
         position: absolute;
-        right: 15.4em;
+        // right: 15.4em;
+        right: 270px;
         transform: translate3d(178.4px, 0px, 0px) rotate(45deg);
         top: -0.5em;
         z-index: 11111;
@@ -68,7 +71,7 @@
 
     .arrow-down{
         position: absolute;
-        right: 15.4em;
+        right: 270px;
         transform: translate3d(178.4px, 0px, 0px) rotate(45deg);
         z-index: 11111;
         width: 16px;
