--- a/src/assets/styles/cmps/_label-picker.scss
+++ b/src/assets/styles/cmps/_label-picker.scss
@@ -11,7 +11,7 @@
     -moz-box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.32);
     height: max-content;
     border-radius: 0.6em;
-    z-index: 111;
+    z-index: 11111111111111;
     flex-direction: column;
     place-items: center;
     color: #323338;
